# MainMonitor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ExternalViewer/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraView.cpp  CameraView.h  Gizmo.cpp  Gizmo.h  Gui.cpp  Gui.h  ImGuiDX12.cpp  ImGuiDX12.h  ImGuiDX12.ps  ImGuiDX12Impl.h  ImGuiImplScreenState.cpp  ImGuiImplScreenState.h  ImGuiWin32.h  Model.cpp  Model.h  MyD3D12Helper.h  OpenVRRenderModel.hlsl  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  VR.cpp  VR.h  frame_metrics.cpp  frame_metrics.h  main.cpp  metrics_gui.cpp  save_windowplacement.h
ExternalViewer/Gui/: Gizmo.cpp  Gizmo.h  Gui.cpp  Gui.h  GuiView.cpp  GuiView.h  ImGuiDX12.cpp  ImGuiDX12.h  ImGuiDX12.vs  ImGuiDX12FrameResources.cpp  ImGuiDX12FrameResources.h  ImGuiDX12Impl.h  ImGuiImplScreenState.h  View.cpp  View.h
MainMonitor/: unityProject.vrmanifest
MainMonitor/Assets/MainMonitor/Scenes/: MainScene.unity
MainMonitor/Assets/SteamVR_Resources/Resources/: SteamVR_Settings.asset
MainMonitor/ProjectSettings/: ProjectSettings.asset
d12util/: CMakeLists.txt  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  ConstantBuffer.cpp  ConstantBuffer.h  Heap.cpp  Heap.h  Helper.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RenderTarget.cpp  RenderTarget.h  ResourceItem.cpp  ResourceItem.h  RootSignature.cpp  RootSignature.h  SceneMapper.cpp  SceneMapper.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Uploader.cpp  Uploader.h  Window.h  d12util.h
desktop_dupl/: CMakeLists.txt  duplicator.cpp  duplicator.h  main.cpp  overlay.cpp  quad.cpp  quad.h  quad.hlsl
hierarchy/: CMakeLists.txt  Camera.cpp  Camera.h  DrawList.cpp  DrawList.h  GltfLoader.cpp  GltfLoader.h  Model.cpp  Model.h  OpenVRRenderModel.hlsl  ParseGltf.cpp  ParseGltf.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneGltf.cpp  SceneGltf.h  SceneImage.cpp  SceneImage.h  SceneLight.h  SceneMaterial.cpp  SceneMaterial.h  SceneMesh.cpp  SceneMesh.h  SceneMeshSkin.cpp  SceneMeshSkin.h  SceneModel.cpp  SceneModel.h  SceneNode.cpp  SceneNode.h  SceneView.cpp  SceneView.h  Shader.cpp  Shader.h  ShaderConstantVariable.cpp  ShaderConstantVariable.h  ShaderManager.cpp  ShaderManager.h  ShaderWatcher.cpp  (+7 more)
hierarchy/MeshFactory/: CreateGrid.h
imgui/: CMakeLists.txt
scngrph/: CMakeLists.txt  Camera.cpp  Camera.h  Model.cpp  Model.h  Scene.cpp  Scene.h
screenstate/: CMakeLists.txt  ImGuiImplScreenState.cpp  ScreenState.h  Win32Window.cpp  Win32Window.h
shaders/: default.hlsl  gizmo.hlsl  gltf_standard.hlsl  gltf_unlit.hlsl  grid.hlsl
vrcui/: CMakeLists.txt  main.cpp
